[NCL-9807] Start storing rebuild mode of a (group)build into DB
