# rest-api/pnc-openapi.yaml
@@ -8788,6 +8788,12 @@ components:
           type: string
         productVersion:
           $ref: '#/components/schemas/ProductVersionRef'
+        rebuildMode:
+          type: string
+          enum:
+          - IMPLICIT_DEPENDENCY_CHECK
+          - EXPLICIT_DEPENDENCY_CHECK
+          - FORCE
         startTime:
           type: string
           format: date-time
@@ -8848,6 +8854,12 @@ components:
           format: date-time
         id:
           type: string
+        rebuildMode:
+          type: string
+          enum:
+          - IMPLICIT_DEPENDENCY_CHECK
+          - EXPLICIT_DEPENDENCY_CHECK
+          - FORCE
         startTime:
           type: string
           format: date-time
